--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <span onclick="color(this)" class="clr5"></span>
                     <span onclick="color(this)" class="clr6"></span>
                     <label for="side-menu-switch">
-                        <i onclick="icon()" class="fas fa-angle-left"></i>
+                        <i class="fas icon fa-angle-right"></i>
                     </label>
 
 
@@ -45,9 +45,11 @@
             welcome.style.display = "none";
         }, 5000)
 
-        function icon() {
-            this.classList.add("fa-angle-right")
-        }
+        var icon = document.querySelector(".icon")
+        icon.addEventListener("click", () => {
+            icon.classList.toggle('fa-angle-left')
+        })
+
         const btn = document.querySelector('div .btn');
         // Create a new HTML table element
         const table = document.createElement("table");
@@ -221,12 +223,12 @@
         flex-direction: column;
         box-sizing: border-box;
         justify-content: space-between;
-        background-image: linear-gradient(0deg, #3381b0, #87cefa);
+        background: black;
         display: flex;
         box-shadow: 5px 0px 10px rgba(17, 26, 41, 0.6);
         position: absolute;
-        left: 100%;
-        border-radius: 10px 0 10px 10px;
+        right: 100%;
+        border-radius: 0px 10px 10px 0px;
         transition: .5s;
         /* transform: translateX(0); */
     }
@@ -260,11 +262,12 @@
         right: 50px;
         top: 0;
         bottom: 0;
+        left: 100%;
         margin: auto;
         line-height: 50px;
         text-align: center;
         font-size: 30px;
-        border-radius: 10px 0px 0 10px;
+        border-radius: 0px 10px 10px 0px;
     }
 
     #side-menu-switch {
@@ -273,7 +276,7 @@
     }
 
     #side-menu-switch:checked+.side-menu {
-        transform: translateX(-100%);
+        transform: translateX(100%);
     }
 
     span {
