--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="main">
         <div class="data">
-            <input type="number" name="text" class="inp" required>
+            <input type="number" name="text" class="inp" placeholder="Enter number here..." required>
             <button class="btn">Get Table</button>
 
         </div>
